--- a/fontend/src/pages/New/styles.css
+++ b/fontend/src/pages/New/styles.css
@@ -3,13 +3,21 @@ label#thumbnail {
     border:  1px dashed #ddd;
     background-size: cover;
     cursor: pointer;
-    display: flex;
     height: 160px;
     
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
 label#thumbnail input {
+    display: none;
+}
+
+label#thumbnail.has-thumbnail {
+    border: 0;
+}
+
+label#thumbnail.has-thumbnail img {
     display: none;
 }
